--- a/index.html
+++ b/index.html
@@ -3,18 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/mainPage.css">
+    <link rel="stylesheet" href="/css/mainPage.css">
     <title>Jeffery's Site</title>
 </head>
-<header>
 
-</header>
 <body>
+    <header>
+        <nav>
+            <div class="container">
+                <p>Hello World</p>
+                <p>Hello World</p>
+                <p>Hello World</p>
+                <p>Hello World</p>
+                <p>Hello guys</p>
+                <p>Hello guys</p>
+                <p>Hello guys</p>
+                <p>Hello guys</p>
+                <p>Hello guys</p>
+                <p>Hello guys</p>
+                <p>Hello guys</p>
+            </div>
+        </nav>
+    </header>
     <main>
 
     </main>
-</body>
-<footer>
+    <footer>
 
-</footer>
+    </footer>
+</body>
+
 </html>
